--- a/content/post/2024-02-07-Python面试题[高级类].md
+++ b/content/post/2024-02-07-Python面试题[高级类].md
@@ -7,19 +7,49 @@ tags:
     - 面经
 ---
 
-# 高级类
-### Python的GIL
+# 比较一下进程、线程、协程
+- Python中的进程（Process），线程（Thread），和协程（Coroutine）是用于处理并发的不同工具，它们各自有不同的特点和适用场景。
+- 进程
+    - 特点
+        - 独立的内存空间，每个进程有自己的地址空间，互不影响
+        - 进程间通信需要使用IPC机制(inter-process communication)
+        - 稳定，进程间崩溃不影响其他进程
+    - 场景
+        - CPU密集型任务，可以利用多核优势
+        - 需要独立运行的服务
+- 线程
+    - 特点
+        - 共享进程的内存空间，可以直接访问进程中的数据
+        - 线程间通信较简单，需要注意线程安全
+        - 一个线程崩溃可能影响整个进程
+    - 场景
+        - I/O密集型任务，如网络请求，文件操作
+        - 可以利用多线程提高并发性能
+- 协程
+    - 特点
+        - 一种轻量级线程，协程由程序员控制，不由系统控制
+        - 协程之间可以通过特定的方式让出执行权，实现协作式多任务
+        - 适用于高并发，异步IO的场景
+    - 场景
+        - 异步编程，如Web框架、网络服务器
+        - 需要高并发，低延迟的应用
+
+*需要注意的是，Python中的GIL（全局解释器锁）限制了多线程的并行性，使得在多核CPU上无法发挥多线程的优势。在这种情况下，可以考虑使用多进程或协程来实现并发。*
+
+
+
+# Python的GIL
 **为什么Python中的多线程不是真正的多线程？**
 - GIL 是python的全局解释器锁，同一进程中假如有多个线程运行，一个线程在运行python程序的时候会霸占python解释器（加了一把锁即GIL），使该进程内的其他线程无法运行，等该线程运行完后其他线程才能运行。如果线程运行过程中遇到耗时操作，则解释器锁解开，使其他线程运行。所以在多线程中，线程的运行仍是有先后顺序的，并不是同时进行。
 - 多进程中因为每个进程都能被系统分配资源，相当于每个进程有了一个python解释器，所以多进程可以实现多个进程的同时运行，缺点是进程系统资源开销大。
 
-### Python中如何进行内存管理的
+# Python中如何进行内存管理的
 - Python 中的内存管理由 Python 内存管理器处理。管理器分配的内存是专用于Python的私有堆空间的形式。所有Python对象都存储在这个堆中，并且是私有的，程序员无法访问它。不过，Python 确实提供了一些核心 API 函数来处理私有堆空间。
 - 此外，Python 有一个内置的垃圾收集功能，可以为私有堆空间回收未使用的内存。
 - Memory management in Python is handled by the Python Memory Manager. The memory allocated by the manager is in form of a private heap space dedicated to Python. All Python objects are stored in this heap and being private, it is inaccessible to the programmer. Though, python does provide some core API functions to work upon the private heap space.
 - Additionally, Python has an in-built garbage collection to recycle the unused memory for the private heap space.
 
-### 介绍一下Python的生成器(generators)
+# 介绍一下Python的生成器(generators)
 生成器是一种以设定的方式返回项目的可迭代集合的函数，一次一个。一般来说，生成器用于通过不同的方法创建迭代器。他们使用`yield`关键字而不是`return`来返回生成器对象。
 Generators are functions that return an iterable collection of items, one at a time, in a set manner. Generators, in general, are used to create iterators with a different approach. They employ the use of yield keyword rather than return to return a generator object.
 
@@ -48,7 +78,7 @@ for i in fib(10):
 ```
 
 
-### 介绍一下Python装饰器(decorators)
+# 介绍一下Python装饰器(decorators)
 - Python 中的装饰器本质上是向 Python 中现有函数添加功能而不更改函数本身结构的函数。它们在 Python 中用 @decorator_name 表示，并以自下而上的方式调用。
 - Decorators in Python are essentially functions that add functionality to an existing function in Python without changing the structure of the function itself. They are represented the @decorator_name in Python and are called in a bottom-up fashion.
 ``` python
@@ -68,7 +98,7 @@ hello()
 装饰器的美妙之处在于，除了向方法的输出添加功能之外，它们甚至可以接受函数的参数，并且可以在将这些参数传递给函数本身之前进一步修改这些参数。内部嵌套函数，即“包装器”函数，在这里发挥着重要作用。它的实现是为了强制封装，从而使其自身在全局范围内隐藏。
 The beauty of the decorators lies in the fact that besides adding functionality to the output of the method, they can even accept arguments for functions and can further modify those arguments before passing it to the function itself. The inner nested function, i.e. 'wrapper' function, plays a significant role here. It is implemented to enforce encapsulation and thus, keep itself hidden from the global scope.
 
-### 介绍一下Python的迭代器(iterators)
+# 介绍一下Python的迭代器(iterators)
 - 迭代器是一个对象。
 - 它会记住它的状态，即迭代期间它所在的位置（请参阅下面的代码以了解如何进行）
 `__iter__()` 方法初始化一个迭代器。
@@ -76,7 +106,7 @@ The beauty of the decorators lies in the fact that besides adding functionality 
 - 它也是可自我迭代的。
 - 迭代器是我们可以迭代可迭代对象（如列表、字符串等）的对象。
 
-### 介绍一下dict和list的推导器(comprehensions)
+# 介绍一下dict和list的推导器(comprehensions)
 Python 推导式与装饰器一样，是语法糖结构，可帮助从给定列表、字典或集合构建更改和过滤的列表、字典或集合。使用推导式可以节省大量时间和代码，这些代码可能会更加冗长（包含更多代码行）。让我们看一些例子，其中推导式确实有用
 Python comprehensions, like decorators, are syntactic sugar constructs that help build altered and filtered lists, dictionaries, or sets from a given list, dictionary, or set. Using comprehensions saves a lot of time and code that might be considerably more verbose (containing more lines of code). Let's check out some examples, where comprehensions can be truly beneficial
 ``` python
@@ -103,14 +133,14 @@ my_list = [[10,20,30],[40,50,60],[70,80,90]]
 flattened = [x for temp in my_list for x in temp]
 # output => [10, 20, 30, 40, 50, 60, 70, 80, 90]
 ```
-### 介绍一下lambda表达式
+# 介绍一下lambda表达式
 Lambda 是 Python 中的一个匿名函数，它可以接受任意数量的参数，但只能有一个表达式。它通常用于需要短时间匿名函数的情况。 Lambda 函数可以通过以下两种方式使用：
 Lambda is an anonymous function in Python, that can accept any number of arguments, but can only have a single expression. It is generally used in situations requiring an anonymous function for a short time period. Lambda functions can be used in either of the two ways:
 ``` python
 mul = lambda a, b : a * b
 print(mul(2, 5))    # output => 10
 ```
-### 如何复制一个对象
+# 如何复制一个对象
 在Python中，赋值语句（=运算符）不会复制对象。相反，它会在现有对象和目标变量名称之间创建绑定。要在Python中创建对象的副本，我们需要使用copy模块。此外，有两种使用复制模块为给定对象创建副本的方法 -
 - **浅拷贝**: 是对象的按位复制。创建的复制对象具有原始对象中值的精确副本。如果其中一个值是对其他对象的引用，则仅复制该对象的引用地址。
 - **深拷贝**: 将所有值从源对象递归复制到目标对象，即它甚至复制源对象引用的对象。
@@ -118,22 +148,22 @@ In Python, the assignment statement (= operator) does not copy objects. Instead,
 - **Shallow Copy** is a bit-wise copy of an object. The copied object created has an exact copy of the values in the original object. If either of the values is a reference to other objects, just the reference addresses for the same are copied.
 - **Deep Copy** copies all values recursively from source to target object, i.e. it even duplicates the objects referenced by the source object.
 
-### range和xrange的区别
+# range和xrange的区别
 xrange() 和 range() 在功能上非常相似。它们都生成一个整数序列，唯一的区别是 range() 返回一个 Python 列表，而 xrange() 返回一个 xrange 对象。
 那么这有何不同呢？确实如此，因为与 range() 不同，xrange() 不会生成静态列表，而是动态创建值。该技术通常与对象类型生成器一起使用，并被称为“yielding”。
 
 - yielding: 在内存受限的应用中，良率至关重要。在这种情况下，在 range() 中创建静态列表可能会导致内存错误，而 xrange() 可以通过为生成器使用足够的内存（相比之下要少得多）来最佳地处理它。
 
-### 什么是PYTHONPATH
+# 什么是PYTHONPATH
 PYTHONPATH 是一个环境变量，您可以设置它来添加 Python 将在其中查找模块和包的其他目录。这对于维护您不希望安装在全局默认位置的 Python 库特别有用。
 PYTHONPATH is an environment variable which you can set to add additional directories where Python will look for modules and packages. This is especially useful in maintaining Python libraries that you do not wish to install in the global default location.
 
-### .py 和 .pyc 有什么区别
+# .py 和 .pyc 有什么区别
 - .py 文件包含程序的源代码。而 .pyc 文件包含程序的字节码。编译 .py 文件（源代码）后我们得到字节码。不会为您运行的所有文件创建 .pyc 文件。它仅为您导入的文件创建。
 - 在执行 python 程序之前，python 解释器会检查已编译的文件。如果该文件存在，虚拟机就会执行它。如果未找到，它将检查 .py 文件。如果找到，则将其编译为 .pyc 文件，然后 python 虚拟机执行它。
 - 拥有 .pyc 文件可以节省编译时间
 
-### python的解释过程(interpreted)
+# python的解释过程(interpreted)
 - Python 作为一种语言，不是解释型的，也不是编译型的。解释或编译是实现的属性。 Python 是一种通常解释的字节码（解释器可读指令集）。
 - 源代码是一个扩展名为 .py 的文件。
 - Python 将源代码编译为虚拟机的一组指令。 Python 解释器是该虚拟机的实现。这种中间格式称为“字节码”。
@@ -143,7 +173,7 @@ PYTHONPATH is an environment variable which you can set to add additional direct
 - Python compiles the source code to a set of instructions for a virtual machine. The Python interpreter is an implementation of that virtual machine. This intermediate format is called “bytecode”.
 - .py source code is first compiled to give .pyc which is bytecode. This bytecode can be then interpreted by the official CPython or JIT(Just in Time compiler) compiled by PyPy.
 
-### `*args`和`**kwargs`
+# `*args`和`**kwargs`
 ***args**
 - `*args` 是函数定义中用于传递可变长度参数的特殊语法。
 - `*`表示可变长度，`args`是约定使用的名称。您可以使用任何其他。
